Glyphicons now work and added Font Awesome
Copied the fonts folder from bootstrap into `/public/fonts`

Also added documentation

--- a/meteor/client/main.scss
+++ b/meteor/client/main.scss
@@ -3,3 +3,7 @@
 @import "stylesheets/partials/navbar-twbscolor";
 @import "stylesheets/partials/buttons";
 @import "stylesheets/partials/layout";
+
+// @include font-face(Glyphicon, "bootstrap/fonts");
+
+// @import '/bootstrap/dist/css/bootstrap.min.css';
