Added social-buttons scss
Not working due to missing variables from bootstrap source

--- a/meteor/client/main.scss
+++ b/meteor/client/main.scss
@@ -4,6 +4,8 @@
 @import "stylesheets/partials/buttons";
 @import "stylesheets/partials/layout";
 
+@import "stylesheets/vendor/_buttons-social"
+
 // @include font-face(Glyphicon, "bootstrap/fonts");
 
 // @import '/bootstrap/dist/css/bootstrap.min.css';
