User creation and Log in works now
Also deleted routing after log in since that is going to be handled differently. 
Added documentation. Fixed indentation. And added style for form validation messages.

--- a/meteor/client/main.scss
+++ b/meteor/client/main.scss
@@ -3,8 +3,9 @@
 @import "stylesheets/partials/navbar-twbscolor";
 @import "stylesheets/partials/buttons";
 @import "stylesheets/partials/layout";
+@import "stylesheets/partials/forms";
 
-@import "stylesheets/vendor/_buttons-social"
+@import "stylesheets/vendor/buttons-social"
 
 // @include font-face(Glyphicon, "bootstrap/fonts");
 
