--- a/meteor/imports/ui/stylesheets/colors.scss
+++ b/meteor/imports/ui/stylesheets/colors.scss
@@ -23,3 +23,25 @@ $bgDefault      : #a68739;
 $bgHighlight    : #614708;
 $colDefault     : #fff6df;
 $colHighlight   : #eed491;
+
+
+
+$primary: #337ab7;
+$success: #5cb85c;
+$info:    #5bc0de;
+$warning: #f0ad4e;
+$danger:  #d9534f;
+
+$gray-darker: #222;
+$gray-dark: #333;
+$gray: #555;
+$gray-light: #777;
+$gray-lighter: #eee;
+
+$facebook: #3b5998;
+$google: #ea4335;
+
+$cb-blue: #4285F4;
+$cb-green: #00D490;
+$cb-yellow: #FFCF50;
+$cb-red: #DA5847;
