:art: :bug: Fix Basic Navigation and Add Some Features
Add Privacy, Terms, markdown pages Utility,
Profile Button in nav bar, Logout page,
Icon Component, Footer

--- a/meteor/imports/ui/components/OAuthLoginButton/OAuthLoginButton.scss
+++ b/meteor/imports/ui/components/OAuthLoginButton/OAuthLoginButton.scss
@@ -29,12 +29,12 @@
     &:hover { background: darken($google, 5%); }
   }
 
-  &.OAuthLoginButton-github {
-    background: $github;
-    color: #fff;
-
-    &:hover { background: darken($github, 5%); }
-  }
+  // &.OAuthLoginButton-github {
+  //   background: $github;
+  //   color: #fff;
+  //
+  //   &:hover { background: darken($github, 5%); }
+  // }
 
   &:active {
     position: relative;
