:art::fire::bug: Restructure modules, api and startup. Fix Bugs
Delete unnecesary module (get-user-identity), change names and
re-organise code.

Change fixtures to add seeder. Fix on-create-user to reflect changes.

Add User Schema in api and fix bugs on Navigation, AdminPage and
Authenticated.

--- a/meteor/imports/ui/stylesheets/app.scss
+++ b/meteor/imports/ui/stylesheets/app.scss
@@ -9,6 +9,6 @@
 @import "./forms";
 @import './bootstrap-overrides';
 
-@import "./navbar-twbscolor";
+// @import "./navbar-twbscolor";
 
 // @include font-face(Glyphicon, "bootstrap/fonts");
