--- a/meteor/imports/ui/pages/Projects/Projects.scss
+++ b/meteor/imports/ui/pages/Projects/Projects.scss
@@ -1,4 +1,20 @@
-.Projects table tbody tr td {
-  vertical-align: middle;
-  text-align: center;
+.Projects table {
+    thead tr th.center-column{
+        text-align: center;
+    }
+    tbody tr{
+        td {
+          vertical-align: middle;
+          &:hover{
+              cursor: pointer;
+          }
+          button.btn.btn-default{
+              border: 0px;
+          }
+        }
+        td.center-column {
+          text-align: center;
+          vertical-align: middle;
+        }
+    }
 }
