--- a/meteor/imports/ui/pages/Profile/Profile.scss
+++ b/meteor/imports/ui/pages/Profile/Profile.scss
@@ -2,7 +2,7 @@
 
 .OAuthProfile {
   .LoggedInWith {
-    padding: 10px 20px;
+    padding: 10px 20px 20px 20px;
     border-radius: 3px;
     color: #fff;
 
@@ -20,7 +20,7 @@
       i {
         font-size: 30px;
         position: relative;
-        top: 5px;
+        // top: 5px;
       }
     }
 
