--- a/meteor/imports/ui/components/MapComponent/MapComponent.scss
+++ b/meteor/imports/ui/components/MapComponent/MapComponent.scss
@@ -1,7 +1,6 @@
 .MapComponent {
-    border: 5px;
-    background-color: #ddd;
-    .map img {
-        height: 250px;
+    #mymap {
+        height: 90%;
+        margin-bottom: 5px;
     }
 }
