:art: DRY. Added itemList stylesheet.
This styleseet was used in several componenet so a global style one was
added, the ItemList class to delete repeated code.

--- a/meteor/imports/ui/stylesheets/app.scss
+++ b/meteor/imports/ui/stylesheets/app.scss
@@ -8,6 +8,7 @@
 @import "./colors";
 @import "./forms";
 @import './bootstrap-overrides';
+@import './itemList';
 
 // @import "./navbar-twbscolor";
 
