Fix WayPointList Position over map. WIP - width is not quite right

--- a/meteor/imports/ui/components/WayPointList/WayPointList.scss
+++ b/meteor/imports/ui/components/WayPointList/WayPointList.scss
@@ -1,5 +1,5 @@
 div.WayPointList{
-    position: absolute
-    bottom: 0px;
-    border: 3px;
+    position: absolute;
+    bottom: 0;
+    background-color: rgba(166,135, 57,0.5);
 }
