--- a/meteor/imports/ui/components/MissionData/MissionData.scss
+++ b/meteor/imports/ui/components/MissionData/MissionData.scss
@@ -1,5 +1,6 @@
-div.WayPointList{
+div.MissionData{
     position: absolute;
     bottom: 0;
     background-color: rgba(255,255, 255,0.5);
+    width: 97%;
 }
