:art: Nested the table inside the `ItemList` class, I think

--- a/meteor/imports/ui/stylesheets/itemList.scss
+++ b/meteor/imports/ui/stylesheets/itemList.scss
@@ -1,4 +1,5 @@
-.ItemList table {
+.ItemList {
+  table {
     thead tr th.center-column{
         text-align: center;
     }
@@ -43,4 +44,5 @@
           }
         }
       }
+  }
 }
