--- a/meteor/imports/ui/components/WayPointList/WayPointList.scss
+++ b/meteor/imports/ui/components/WayPointList/WayPointList.scss
@@ -1,6 +1,31 @@
 div.WayPointList{
-    position: absolute;
-    bottom: 0;
-    background-color: rgba(255,255, 255,0.5);
-    z-index:1;
+  position: absolute;
+  width: 100%;
+  margin: 0px 0px 0px -15px;
+  padding: 0 15px;
+  height: 30%;
+  bottom: 0;
+  overflow: auto;
+  background-color: rgba(255,255, 255,0.7);
+  z-index:1;
+  table {
+    width: 100%;
+    thead tr th {
+      &.center-column{
+        text-align: center;
+      }
+      &.right-column{
+        text-align: right;
+      }
+    }
+    tbody tr td {
+      vertical-align: middle;
+      &.center-column {
+        text-align: center;
+      }
+      &.right-column{
+        text-align: right;
+      }
+    }
+  }
 }
