--- a/meteor/imports/ui/components/MissionMap/MissionMap.scss
+++ b/meteor/imports/ui/components/MissionMap/MissionMap.scss
@@ -5,3 +5,17 @@
         z-index:0;
     }
 }
+.waypointIcon {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.take-off { color: #00FFFF };
+.landing { color: #FF5733 };
+.camera-on { color: #00FF66 };
+.camera-off { color: #00FF66 };
+.waypoint { color: #FFC300 };
+.calendar-text {
+  margin-top: -4px;
+  margin-left: 4px;
+  color: #FFFFFF;
+}
