--- a/meteor/imports/ui/components/FligthTime/Slider.scss
+++ b/meteor/imports/ui/components/FligthTime/Slider.scss
@@ -1,7 +1,3 @@
-div#wrapper{
-  border: 1px solid grey;
-}
-
 .track,
 .track-inset,
 .track-overlay {
@@ -43,22 +39,19 @@ div#wrapper{
 .selector {
     fill: #f00;
     z-index: -10;
-    // marker-end:
     cursor: crosshair;
 }
 
+div#SliderWrapper{
+  height: 85px;
+  // border: 1px solid grey;
+}
+
 h5#TimeRange{
-  margin-left: 10px;
+  margin: 10px;
 }
 
 svg#svg{
+  width: 100%;
+  height: 50px;
 }
-//
-// div#wrapper{
-//   margin: 15px;
-//   position: absolute;
-//   top: 250px;
-//   left: 0;
-//   background-color: #777777;
-//   z-index: 20;
-// }
