--- a/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
+++ b/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
@@ -1,18 +1,8 @@
-.MissionVideo{
-  margin: 15px;
-  position: absolute;
-  top: 50px;
-  bottom: 60px;
-  left: 0;
-  right: 0;
-}
-
 div.Buttons{
   position: absolute;
-  top: 0;
-  bottom: 0;
   left: 0;
-  width: 15%;
+  width: 10%;
+  height: 100%;
   background-color: #bbbbbb;
   z-index: 15;
 }
@@ -21,23 +11,11 @@ div.Map{
   margin-left: 15px;
   margin-right: 15px;
   position: absolute;
-  top: 0;
-  bottom: 95px;
-  left: 15%;
+  left: 10%;
   right: 40%;
+  height: 100%;
   background-color: #999999;
   z-index: 0;
-}
-
-div.wrapper{
-  margin-left: 15px;
-  position: absolute;
-  height: 80px;
-  bottom: 0;
-  left: 15%;
-  right: 0;
-  background-color: #777777;
-  z-index: 20;
 }
 
 video#Video{
