--- a/meteor/imports/ui/pages/Hector/Hector.scss
+++ b/meteor/imports/ui/pages/Hector/Hector.scss
@@ -1,8 +1,8 @@
 div#SliderWrapper{
-  margin-left: 15px;
+  // margin-left: 15px;
   margin-right: 15px;
   position: absolute;
-  left: 10%;
+  left: 200px;
   right: 40%;
   bottom: 0;
 }
@@ -20,6 +20,12 @@ div#MissionVideo{
   bottom: 85px;
   left: 0;
   right: 0;
+}
+
+div#Dial{
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 div#Hector{
