:bug: Fix attitude widget

--- a/meteor/imports/ui/components/FlightWidgets/FlightWidgets.scss
+++ b/meteor/imports/ui/components/FlightWidgets/FlightWidgets.scss
@@ -11,6 +11,7 @@ div.instrument div {
     top: 0;
     left: 0;
     width: inherit;
+    height: 100%;
 }
 
 div.instrument div img {
@@ -18,4 +19,5 @@ div.instrument div img {
     top: 0;
     left: 0;
     width: inherit;
+    height: inherit;
 }
