--- a/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
+++ b/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
@@ -42,7 +42,7 @@ video#Video{
   right: 0;
   width: 40%;
 }
-div.TxtVideo{
+div.TxtVideoDiv{
   margin-left: 15px;
   position: absolute;
   left: 15%;
