--- a/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
+++ b/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
@@ -3,7 +3,7 @@ div.ButtonDiv{
   left: 0;
   width: 15%;
   height: 100%;
-  background-color: #bbbbbb;
+  background-color: #ffffff;
   z-index: 0;
 
   button{
