:bug: Change the `<i>`  for fontawesome to `<span>`

--- a/meteor/imports/ui/components/MissionPlan/MissionPlan.scss
+++ b/meteor/imports/ui/components/MissionPlan/MissionPlan.scss
@@ -5,7 +5,7 @@
       display: inline-block;
       vertical-align: middle;
       clear:both;
-      i{
+      span{
         margin-right: 7px;
       }
     }
