--- a/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
+++ b/meteor/imports/ui/components/MissionVideo/MissionVideo.scss
@@ -7,21 +7,15 @@ div.ButtonDiv{
   z-index: 0;
 
   button{
-    padding: 10px;
+    padding: 15px;
     div{
       display: inline-block;
       vertical-align: middle;
       clear:both;
-      i{
-        margin-right: 0px;
+      span{
+        margin-right: 7px;
       }
     }
-  }
-  .padding2{
-    padding: 0px 15px;
-  }
-  .margin-bottom{
-    margin: 0px 0px;
   }
 }
 
