:art: Add new style for read WP

--- a/meteor/imports/ui/components/PreFlightMap/PreFlightMap.scss
+++ b/meteor/imports/ui/components/PreFlightMap/PreFlightMap.scss
@@ -19,3 +19,14 @@
   margin-left: 4px;
   color: #f8f9fa!important;
 }
+
+.take-off-read { color: rgba(0, 123, 255, 0.3)!important };
+.landing-read { color: rgba(220, 53, 69, 0.3)!important };
+.camera-read { color: rgba(40, 167, 69, 0.3)!important };
+.ban-read { color: rgba(220, 53, 69, 0.3)!important };
+.waypoint-read { color: rgba(255, 193, 7, 0.3)!important };
+.calendar-text-read {
+  margin-top: -4px;
+  margin-left: 4px;
+  color: rgba(248, 249, 250, 0.3)!important;
+}
